src/objects/GeolocationUtility__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>GooglePremiumUsage__c</fullName>
        <description>API Key to the Google Premium Usage
https://developers.google.com/maps/documentation/geocoding/usage-limits</description>
        <inlineHelpText>API Key to the Google Premium Usage</inlineHelpText>
        <label>Google Premium Usage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoogleStandardUsage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Free Google Standard Usage for Google Map API
https://developers.google.com/maps/documentation/geocoding/usage-limits</description>
        <inlineHelpText>Free Google Map API Standard Usage limits to 2500 free requests day; 50 requests per second</inlineHelpText>
        <label>Google Standard Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LatitudeAPIName__c</fullName>
        <description>Client to provide the API name of the field that intends to hold the latitude value on the SObject</description>
        <inlineHelpText>API Name for the latitude field.</inlineHelpText>
        <label>Latitude API Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LongitudeAPIName__c</fullName>
        <description>Client to provide the API name of the field that intends to hold the longitude value on the SObject</description>
        <inlineHelpText>API Name for the longitude field.</inlineHelpText>
        <label>Longitude API Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObjectName__c</fullName>
        <description>Client to provide the SObject&apos;s API name</description>
        <inlineHelpText>API name of the SObject</inlineHelpText>
        <label>SObject Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Geolocation Utility</label>
</CustomObject>